<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">礼品商城</string>
    <string name="home">首页</string>
    <string name="category">分类</string>
    <string name="scan">扫码</string>
    <string name="cart">购物车</string>
    <string name="my">我的</string>
    <string name="find_et_hint">一件好礼品一份好心情</string>
    <string name="search">搜索</string>
    <string name="myMall">我的商城</string>
    <string name="myCollection">我的收藏</string>
    <string name="myOrder">我的订单</string>
    <string name="myAllCollection">查看所有收藏</string>
    <string name="myAllOrder">查看所有订单</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="back">返回</string>
    <string name="dog">狗</string>
    <string name="account">账号：</string>
    <string name="account_hint">用户名/邮箱/手机号</string>
    <string name="password">密码：</string>
    <string name="password_hint">请输入密码</string>
    <string name="edit">编辑</string>
    <string name="suggest">请先登录再查看购物车</string>
    <string name="cart_empty">购物车肚子空空</string>
    <string name="selectAll">全选</string>
    <string name="buy">去结算</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="index_search_edit_hint">搜索京东商品</string>
    <string name="color_buy">颜色购</string>
    <string name="camera_buy">拍照购</string>
    <string name="action_settings">Settings</string>
    <string name="myShop">购物车</string>
    <string name="updateShopNum">修改商品数量</string>
    <string name="updateAddress">修改地址</string>
    <string name="numberSub">-</string>
    <string name="numberAdd">+</string>
    <string name="barcode_buy">条码购</string>
    <string name="shopTotal">合计：</string>
    <string name="shopTotalNum">￥0.00</string>
    <string name="shopTotalPrice">总额：</string>
    <string name="checkOut">去结算</string>
    <string name="delete">删除</string>
    <string name="collection">收藏</string>
    <string name="allslect">全选</string>
    <string name="sure">确定</string>
    <string name="sureOrder">确认订单</string>
    <string name="leaveMeassge">给卖家留言</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="text_btn_addIntoCart">加入购物车</string>
    <string name="accomplish">完成</string>


    <!-- 首页 -->
    <string name="index_limit">还剩</string>
    <string name="index_hour">时</string>
    <string name="index_min">分</string>
    <string name="index_seconds">秒</string>
    <string name="index_price">秒杀价:</string>
    <string name="index_raw_price">原价:</string>
    <string name="index_slogan">疯狂秒杀</string>
    <string name="index_promotion">促销卖场</string>
    <string name="index_recharge">充值</string>
    <string name="index_group_buy">团购</string>
    <string name="index_lottery">彩票</string>
    <string name="index_shake">摇一摇</string>
    <string name="index_order">订单状态</string>
    <string name="index_history">浏览历史</string>
    <string name="index_collect">我的关注</string>
    <string name="index_life_journey">生活娱乐</string>
    <string name="index_notify_info">向左滑，更多优惠等你抢</string>
    <string name="index_shopping_jinqiufengbao">金秋风暴</string>
    <string name="index_shopping_remenyouhui">热门特惠</string>
    <!-- 首页 -->


    <string name="ip">http://192.168.93.101:8080/giftShop/</string>


    <string name="RSA_pub">MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQDSUmOXyQmYYSnZacp0btvAZCOvCNPtzixAp7eJmzmAG4mgy/VgrY/s1BDLh9qTNHIRWXepUtwMrf1kYul/A45qE/2oxIbeeq4238YDWQ7ModOVXR9ytEHsT0jpCFvoYfYXYZnnoWRrLIBylQeXzqxbLDxxBxGCs4AjoRKh5S7nNQIDAQAB</string>
</resources>
