<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">

            <ImageButton
                android:id="@+id/regist_ib_back"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:background="#00000000"
                android:contentDescription="@string/back"
                android:src="@drawable/top_arrow_back"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/login_top_bg">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_margin="25dp"
                android:background="@drawable/shape_login_dog"
                android:contentDescription="@string/dog"
                android:padding="2dp"
                android:src="@drawable/login_dog"
                android:layout_alignParentLeft="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:text="手机号："
                    android:textSize="18sp"
                    android:layout_marginLeft="20dp" />

                <EditText
                    android:id="@+id/regist_et_account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:hint="@string/account_hint"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/bg_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:text="@string/password"
                    android:textSize="18sp"
                    android:layout_marginLeft="20dp" />

                <EditText
                    android:id="@+id/regist_et_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:text="确认密码："
                    android:textSize="18sp"
                    android:layout_marginLeft="20dp" />

                <EditText
                    android:id="@+id/regist_re_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:hint="重新输入密码以确认"
                    android:inputType="textPassword"
                    android:textSize="18sp" />



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:text="验证码："
                    android:textSize="18sp"
                    android:layout_marginLeft="20dp" />

                <EditText
                    android:id="@+id/regist_et_regist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:hint="验证码"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/regist_et_valify"
                    android:background="@drawable/bg_identify_code_normal"
                    android:gravity="center"
                    android:text="获得验证码"
                    android:layout_width="100dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>


        <Button
            android:id="@+id/regist_btn_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="15dp"
            android:background="@drawable/selector_btn_login"
            android:enabled="false"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="17sp" />


    </LinearLayout>

</ScrollView>