<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:id="@+id/index_top_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/home_top_et_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_input_search"
                android:hint="@string/find_et_hint"
                android:textColorHint="@color/gray"
                android:singleLine="true"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/home_top_ib_search"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="#00000000"
                android:contentDescription="@string/search"
                android:scaleType="centerInside"
                android:src="@drawable/top_search_icon" />

        </LinearLayout>


    <com.example.tby.myapplication.model.AbScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/index_top_layout"
        android:background="@drawable/home_panicbuying_background"
        android:fadingEdge="none"
        android:fadingEdgeLength="0dp"
        android:overScrollMode="never"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical" >

            <com.jude.rollviewpager.RollPagerView
                android:id="@+id/roll_view_pager"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:rollviewpager_play_delay="3000"/>

            <LinearLayout
                android:id="@+id/index_product_images_indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/filter_spider_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <GridView
                    android:id="@+id/grid_main"
                    android:numColumns="4"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">
                </GridView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:drawableLeft="@drawable/home_slide_promotion"
                    android:drawablePadding="10dp"
                    android:text="@string/index_notify_info"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/small_text_size" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/filter_spider_line" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/home_shopping_guang_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:drawableLeft="@drawable/home_shopping_icon"
                    android:drawablePadding="10dp"
                    android:text="@string/index_shopping_jinqiufengbao"
                    android:textColor="@color/black"
                    android:textSize="@dimen/micro_text_size" />

                <HorizontalScrollView
                    android:layout_marginBottom="35dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_margin="10dp" >

                        <GridView
                            android:verticalSpacing="10dp"
                            android:id="@+id/listView1"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center"
                            android:numColumns="auto_fit"
                            android:stretchMode="spacingWidthUniform" >
                        </GridView>
                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:drawableLeft="@drawable/home_shopping_icon"
                    android:drawablePadding="10dp"
                    android:text="@string/index_shopping_remenyouhui"
                    android:textColor="@color/black"
                    android:textSize="@dimen/micro_text_size" />

                <!--Gallery
                    android:id="@+id/index_tehui_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/index_gallery_height"
                    android:layout_marginBottom="35dp"
                    android:spacing="10dp" /-->

                <HorizontalScrollView
                    android:layout_marginBottom="35dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_margin="10dp" >

                        <GridView
                            android:verticalSpacing="10dp"
                            android:id="@+id/listView2"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center"
                            android:numColumns="auto_fit"
                            android:stretchMode="spacingWidthUniform" >
                        </GridView>
                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>
        </LinearLayout>
    </com.example.tby.myapplication.model.AbScrollView>

</RelativeLayout>